--- a/.env.dist
+++ b/.env.dist
@@ -1,9 +1,9 @@
 # SQL database connection cridentials
-DB_HOST = "localhost"
-DB_PORT = "3306"
-DB_DATABASE = "database"
-DB_USERNAME = "username"
-DB_PASSWORD = "password"
+DATABASE_HOST = "localhost"
+DATABASE_PORT = "3306"
+DATABASE_NAME = "database"
+DATABASE_USER = "username"
+DATABASE_PASSWORD = "password"
 
 # Mail server settings
 MAIL_TLS = true
