--- a/.env.dist
+++ b/.env.dist
@@ -6,13 +6,13 @@ DATABASE_USER = "username"
 DATABASE_PASSWORD = "password"
 
 # Mail server settings
-MAIL_TLS = true
-MAIL_AUTH_TIMEOUT = 3000
-MAIL_CONN_TIMEOUT = 1000
+WATCHER_MAIL_TLS = true
+WATCHER_MAIL_AUTH_TIMEOUT = 3000
+WATCHER_MAIL_CONN_TIMEOUT = 1000
 
 # Reconnect options
-MAX_ATTEMPTS_COUNT = 3
-ATTEMPTS_TIMEOUT = 300
+WATCHER_MAX_ATTEMPTS_COUNT = 3
+WATCHER_ATTEMPTS_TIMEOUT = 300
 
 # Sync path
-SYNC_PATH = "../sync/sync"
+WATCHER_SYNC_PATH = "../sync/sync"
