--- a/.env.dist
+++ b/.env.dist
@@ -14,5 +14,5 @@ WATCHER_MAIL_CONN_TIMEOUT = 1000
 WATCHER_MAX_ATTEMPTS_COUNT = 3
 WATCHER_ATTEMPTS_TIMEOUT = 300
 
-# Sync path
-WATCHER_SYNC_PATH = "../sync/sync"
+# Sync executable file location (or symlink)
+WATCHER_SYNC_PATH = "./bin/sync"
