- Logs with winston - DI with typeDI - sync stub executable file

--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "imap-simple": "^4.3.0",
     "dotenv": "^8.2.0",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.1.0",
     "mysql2": "^2.1.0",
     "util": "^0.12.2",
-    "ts-process-promises": "^1.0.2"
+    "ts-process-promises": "^1.0.2",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2",
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
     "ts-node": "^6.0.3",
