--- a/.env.dist
+++ b/.env.dist
@@ -16,4 +16,4 @@ WATCHER_ATTEMPTS_TIMEOUT = 300
 
 # Sync path
 WATCHER_SYNC_PATH="sync"
-WATCHER_ERROR_LOG_PATH="var/log/imap-watcher.log"
+WATCHER_ERROR_LOG_PATH="var/log"
