--- a/.env.dist
+++ b/.env.dist
@@ -15,5 +15,5 @@ WATCHER_MAX_ATTEMPTS_COUNT = 3
 WATCHER_ATTEMPTS_TIMEOUT = 300
 
 # Sync path
-WATCHER_SYNC_PATH="sync"
-WATCHER_ERROR_LOG_PATH="var/log"
+WATCHER_SYNC_PATH="./sync"
+WATCHER_ERROR_LOG_PATH="./var/log"
