--- a/process.yml
+++ b/process.yml
@@ -5,4 +5,7 @@ apps:
     script: dist/index.js
     instances: 1
     exec_mode: cluster
-    watch  : true
+    wait_ready: true
+    kill_timeout: 3000
+    restart_delay: 3000
+    max_memory_restart: '300M'
