--- a/.env.dist
+++ b/.env.dist
@@ -1,18 +1,18 @@
 # SQL database connection cridentials
-DATABASE_HOST = "localhost"
-DATABASE_PORT = "3306"
-DATABASE_NAME = "database"
-DATABASE_USER = "username"
-DATABASE_PASSWORD = "password"
+DATABASE_HOST="localhost"
+DATABASE_PORT="3306"
+DATABASE_NAME="database"
+DATABASE_USER="username"
+DATABASE_PASSWORD="password"
 
 # Mail server settings
-WATCHER_MAIL_TLS = true
-WATCHER_MAIL_AUTH_TIMEOUT = 3000
-WATCHER_MAIL_CONN_TIMEOUT = 1000
+WATCHER_MAIL_TLS=true
+WATCHER_MAIL_AUTH_TIMEOUT=3000
+WATCHER_MAIL_CONN_TIMEOUT=1000
 
 # Reconnect options
-WATCHER_MAX_ATTEMPTS_COUNT = 10
-WATCHER_ATTEMPTS_TIMEOUT = 3000
+WATCHER_MAX_ATTEMPTS_COUNT=10
+WATCHER_ATTEMPTS_TIMEOUT=3000
 
 # Sync path
 WATCHER_SYNC_PATH="./sync"
